wip: start server logic work