@@ -12,6 +12,12 @@ subprojects {
     group = rootProject.group
     version = rootProject.version
 
+    configure<JavaPluginExtension> {
+        toolchain {
+            languageVersion.set(JavaLanguageVersion.of(20))
+        }
+    }
+
     configure<org.cadixdev.gradle.licenser.LicenseExtension> {
         setHeader(rootProject.file("LICENSE_HEADER"))
         include("**/io/github/marcus8448/**/*.java")
@@ -19,5 +25,13 @@ subprojects {
 
     repositories {
         mavenCentral()
+    }
+
+    tasks.withType<JavaCompile> {
+        options.compilerArgs.add("--enable-preview")
+    }
+
+    tasks.withType<JavaExec> {
+        jvmArguments.add("--enable-preview")
     }
 }
